# terminal

./: .gitmodules  .requested_shaders.txt  CMakeLists.txt  README.md  conanfile.txt  test.txt
assets/font/: font.json
assets/fonts/: times_64_sdf_atlas.json  times_64_sdf_atlas_font_info.json
src/: main.cpp
src/graphics/viewport/: viewport.cpp  viewport.hpp
src/modal_editor/: modal_editor.cpp  modal_editor.hpp
src/utility/hierarchical_history/: hierarchical_history.cpp  hierarchical_history.hpp
src/utility/text_buffer/: text_buffer.cpp  text_buffer.hpp
src/utility/text_diff/: text_diff.cpp  text_diff.hpp
